--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".DiaryHistoryActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".DiaryEntryReadActivity"
+            />
 
         <activity
             android:name=".MoodActivity"
